feat: improve subtask management
